--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -78,7 +78,12 @@
                             <div class="dropdown-menu m-0">
                                 <a href="/Master/employee_master" class="dropdown-item">Employee Masteer</a>
 
+                            </div> 
+                            <div class="dropdown-menu m-0">
+                                <a href="/Attendance/PunchINPunchOut.cshtml" class="dropdown-item">Employee Masteer</a>
+
                             </div>
+
                         </div>
 
                     </div>
