--- a/HRMS/Views/Auth/login.cshtml
+++ b/HRMS/Views/Auth/login.cshtml
@@ -204,7 +204,7 @@
         }
         function AdminLogin() {
 
-                window.location.href = "@Url.Action("Admin", "Home")";
+                window.location.href = "@Url.Action("Index", "Home")";
         }
         function loginFailed() {
 
