--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -20,7 +20,9 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>
+                <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"></i>
+                @*<i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i> <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>*@
+
             </a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -30,21 +32,62 @@
                     </li>
 
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex  ">
+
+                    <button class="border-0" asp-area="" asp-controller="Auth" asp-action="login"><i class="fas fa-sign-out-alt fa-lg" style="color: #74C0FC;"></i> Log Out</button>
                 </form>
+
             </div>
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasExampleLabel">MAIN</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <nav class="offcanvas-body">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="offcanvas-body">
+            <div class="dropdown mt-3">
+                @*<a class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                        Dropdown button
+                    </a>*@
+                <a href="#" class="dropdown-toggle link-underline-opacity-0" data-bs-toggle="dropdown">
+                    <i class="fa-solid fa-house fa-sm" style="color: #74C0FC;"></i>
+                   Dashboards
+                </a>
+                <ul class="dropdown-menu">
+
+                    @if (this.User.IsInRole("ADMIN") || this.User.IsInRole("Super ADMIN"))
+                    {
+                    <li>
+                        <a href="/Master/employee_master" class="dropdown-item">Employee Master</a>
+                    </li>
+
+                    <li>
+                        <a href="/Master/DesignationsMaster" class="dropdown-item">Designations Master</a>
+                    </li>
+
+                    <li>
+                        <a href="/Attendance/EmployeeAttendanceModifyList" class="dropdown-item">Employee Attendance Modify List</a>
+                    </li>
+  }
+                    <li>
+                        <a href="/Attendance/PunchINPunchOut" class="dropdown-item">Punch IN Punch Out</a>
+                    </li>
+                    <li>
+                        <a href="/Attendance/LeaveApply" class="dropdown-item">Leave Apply</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">MAIN</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
@@ -55,7 +98,8 @@
                                 <span class="">Dashboards</span>
                             </a>
                             <div class="dropdown-menu m-0">
-                                <a href="/Home/books" class="dropdown-item"></a>
+                                <a href="/Attendance/PunchINPunchOut" class="dropdown-item">Punch IN Punch Out</a>
+
                                 <a href="/Home/novels" class="dropdown-item"></a>
                                 <a href="/Home/original_poetry" class="dropdown-item"></a>
                                 <a href="/Home/translated_work" class="dropdown-item"></a>
@@ -64,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-            </nav>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            </div>
+            <div class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
@@ -77,21 +121,24 @@
                             </a>
                             <div class="dropdown-menu m-0">
                                 <a href="/Master/employee_master" class="dropdown-item">Employee Masteer</a>
+                                <a href="/Master/DesignationsMaster" class="dropdown-item">Designations Master</a>
+                                <a href="/Attendance/PunchINPunchOut" class="dropdown-item">Punch IN Punch Out</a>
+                                <a href="/Attendance/EmployeeAttendanceModifyList" class="dropdown-item">Employee Attendance Modify List</a>
+                                <a href="/Attendance/LeaveApply" class="dropdown-item">Leave Apply</a>
+                            </div>-->
+    @*<div class="dropdown-menu m-0">
+            <a href="/Attendance/PunchINPunchOut.cshtml" class="dropdown-item">Employee Masteer</a>
 
-                            </div> 
-                            <div class="dropdown-menu m-0">
-                                <a href="/Attendance/PunchINPunchOut.cshtml" class="dropdown-item">Employee Masteer</a>
+        </div>*@
 
-                            </div>
-
-                        </div>
+    <!--</div>
 
                     </div>
                 </div>
-            </nav>
-        </nav>
+            </div>
+        </div>
 
-    </div>
+    </div>-->
 
 
 
@@ -111,7 +158,20 @@
     <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-  
+    @*<script type="text/javascript">
+            function btnlogoutOnclick() {
+                  window.location.href = "@Url.Action("login", "Auth")";
+            }
+
+        </script>*@
+    <script type="text/javascript">
+
+        function btnlogoutOnclick() {
+            alert("ok");
+                window.location.href = "@Url.Action("login", "Auth")";
+        }
+
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
